Prevent vertical scrollbars

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,9 @@
 /* ### GLOBAL STYLES ### */
 
+body {
+  overflow-wrap: anywhere;
+}
+
 h1 {
   font-size: 2rem;
 }
